rework to use hooks only

--- a/package.json
+++ b/package.json
@@ -1,25 +1,33 @@
 {
-    "name": "@trulyacerbic/antd-button-login-google",
-    "description": "A NextJS/Ant.Design component for Login With Google (OAuth2) feature. Requires support of a backend server (not included) to proccess Google Server Login flow",
-    "version": "1.0.0",
+    "name": "@trulyacerbic/hooks-react-login-google",
+    "description": "React custom hooks for Login With Google (OAuth2) feature. Requires support of a backend server (not included) to proccess Google Server Login flow",
+    "version": "1.0.7",
     "keywords": [
-        "nextjs",
+        "react-hooks",
         "react",
-        "antd",
-        "ant.design",
         "button",
         "oauth",
         "oauth2",
         "google"
     ],
-    "main": "index.ts",
     "author": "Gleb Varenov <kuzzdra@gmail.com>",
     "license": "MIT",
+    "private": false,
+    "types": "dist/index.d.ts",
+    "main": "dist/index.js",
+    "scripts": {
+        "prepare": "rimraf dist && tsc"
+    },
     "dependencies": {
-        "antd": "^3.23.0",
         "local-storage": "^2.0.0",
-        "next": "^9.0.5",
         "querystring": "^0.2.0",
-        "react": "^16.9.0"
+        "react": "^16.9.0",
+        "react-dom": "^16.9.0"
+    },
+    "devDependencies": {
+        "@types/node": "^12.7.4",
+        "@types/react": "^16.9.2",
+        "rimraf": "^3.0.0",
+        "typescript": "^3.6.2"
     }
 }
